--- a/src/main/resources/templates/admin/admin_login.html
+++ b/src/main/resources/templates/admin/admin_login.html
@@ -22,7 +22,7 @@
 <header>
     <div class="right">
 
-        <a th:href="@{/trainee/login}"><button class="btn">Trainee Login</button></a>
+        <a th:href="@{/trainee/login}"><button class="btn">Member Login</button></a>
         <a th:href="@{/trainer/login}"><button class="btn">Trainer Login</button></a>
     </div>
 
